force-app/main/default/objects/pcldm__Field_Masking__c/pcldm__Field_Masking__c.object-meta.xml
<CustomObject>
    <label>Field Masking</label>
    <nameField>
        <label>Field Masking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Maskings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>