force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Action__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Action__c</fullName>
    <description>Select the Action of Masking for the field</description>
    <inlineHelpText>Select the Action of Masking for the field</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erase</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>