force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Active__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>