force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Field_API__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Field_API__c</fullName>
    <label>Field API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>