force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>