force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Further_Action__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Further_Action__c</fullName>
    <description>This is Dependent on the Action selected before so as to give further actions of Masking to the Field.</description>
    <inlineHelpText>This is Dependent on the Action selected before so as to give further actions of Masking to the Field.</inlineHelpText>
    <label>Further Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pcldm__Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formula Field</fullName>
            </value>
            <value>
                <fullName>Pattern - Custom List</fullName>
            </value>
            <value>
                <fullName>Pattern - Regex</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Hardcoded Text</fullName>
                <label>Hardcoded Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>