force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Object_Masking__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Object_Masking__c</fullName>
    <label>Object Masking</label>
    <referenceTo>pcldm__Object_Masking__c</referenceTo>
    <relationshipLabel>Field Maskings</relationshipLabel>
    <relationshipName>Field_Maskings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>