force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Pattern__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Pattern record based on the field type selected for Field Masking.</inlineHelpText>
    <label>Pattern</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.pcldm__Action__c</field>
            <operation>equals</operation>
            <valueField>pcldm__Pattern__c.pcldm__Type__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>pcldm__Pattern__c</referenceTo>
    <relationshipLabel>Field Maskings</relationshipLabel>
    <relationshipName>Field_Maskings</relationshipName>
    <type>Lookup</type>
</CustomField>