force-app/main/default/objects/pcldm__Field_Masking__c/fields/pcldm__Value__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Value__c</fullName>
    <description>This will display the Value which will be used to Obfuscate depending upon the action selected in the prior step.</description>
    <inlineHelpText>This will display the Value which will be used to Obfuscate depending upon the action selected in the prior step.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>