force-app/main/default/objects/pcldm__Field_Masking__c/validationRules/pcldm__Currency_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>pcldm__Currency_Validation_Rule</fullName>
    <active>true</active>
    <description>Validation Rule of Currency on Field Masking</description>
    <errorConditionFormula>AND(
TEXT(pcldm__Further_Action__c)=&quot;Hardcoded Text&quot;,
pcldm__Field_Type__c =&quot;CURRENCY&quot;,
NOT(REGEX( pcldm__Value__c ,&quot;([0-9]{1,3},([0-9]{3},)*[0-9]{3}|[0-9]+)(.[0-9][0-9])$&quot;)))</errorConditionFormula>
    <errorMessage>Invalid Currency format</errorMessage>
</ValidationRule>