force-app/main/default/objects/pcldm__Field_Masking__c/validationRules/pcldm__Date_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>pcldm__Date_Validation_Rule</fullName>
    <active>true</active>
    <description>Validation Rule for Date on Field Masking.</description>
    <errorConditionFormula>AND(
TEXT(pcldm__Further_Action__c)=&quot;Hardcoded Text&quot;,
pcldm__Field_Type__c =&quot;DATE&quot;,
NOT(REGEX( pcldm__Value__c ,&quot;^(0[1-9]|1[012])[- /.](0[1-9]|[12][0-9]|3[01])[- /.](19|20)[0-9]{2}&quot;)))</errorConditionFormula>
    <errorMessage>Invalid Date Format. Use the format - MM/DD/YYYY</errorMessage>
</ValidationRule>