force-app/main/default/objects/pcldm__Field_Masking__c/validationRules/pcldm__Email_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>pcldm__Email_Validation_Rule</fullName>
    <active>true</active>
    <description>Validation rule for Email on Field Masking.</description>
    <errorConditionFormula>AND(
	TEXT(pcldm__Further_Action__c)=&quot;Hardcoded Text&quot;,
 pcldm__Field_Type__c =&quot;EMAIL&quot;,
NOT(REGEX( pcldm__Value__c ,&quot;^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9]+.[a-zA-Z]{2,3}+$&quot;)))</errorConditionFormula>
    <errorMessage>Invalid email address. Please enter in a correct email format.</errorMessage>
</ValidationRule>