force-app/main/default/objects/pcldm__Field_Masking__c/validationRules/pcldm__Percent_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>pcldm__Percent_Validation_Rule</fullName>
    <active>true</active>
    <description>Validation Rule of Percent on Field Masking.</description>
    <errorConditionFormula>AND(
TEXT(pcldm__Further_Action__c)=&quot;Hardcoded Text&quot;,
pcldm__Field_Type__c =&quot;PERCENT&quot;,
NOT(REGEX( pcldm__Value__c ,&quot;([0-9]+)(.[0-9][0-9])$&quot;)))</errorConditionFormula>
    <errorMessage>Invalid Percent format.</errorMessage>
</ValidationRule>