force-app/main/default/objects/pcldm__Field_Masking__c/listViews/pcldm__All.listView-meta.xml
<ListView>
    <fullName>pcldm__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>